--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "toonflix",
-    "short_name": "toonflix",
+    "name": "pomodoro",
+    "short_name": "pomodoro",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
